Base files added

--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,20 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+header{
+  height: 20vh;
+  background-color: #18181B;
+  box-shadow: 0 2px white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 1.5rem;
+  font-family: poppins,sans-serif
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+header h2{
+  color: whitesmoke;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+header div.logo{
+  display: flex;
+  gap: 1rem;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.red{
+  color: red;
 }
