--- a/src/css/animecard.module.css
+++ b/src/css/animecard.module.css
@@ -1,7 +1,7 @@
 .card {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  /* gap: 0.5rem; */
   width: 250px;
   height: 425px;
   word-wrap: break-word;
@@ -11,6 +11,7 @@
   font-size: 0.8rem;
   color: whitesmoke;
   font-family: 'poppins',sans-serif;
+  position: relative;
 }
 .card img{
   width: 225px;
@@ -19,13 +20,19 @@
   border-radius: 20px;
 }
 
-.card h2 {
+a h2 {
   height: 63px;
   word-break: break-all;
   overflow: hidden;
+  color: aliceblue;
 }
 
 .card div {
   display: flex;
   justify-content: space-between;
+}
+.card i{
+  position: absolute;
+  right: 0;
+  transform: translateX(-30px);
 }
