--- a/src/css/loader.module.css
+++ b/src/css/loader.module.css
@@ -1,4 +1,7 @@
 .spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 44px;
     height: 44px;
     animation: spinner-y0fdc1 2s infinite ease;
