--- a/src/css/animedetail.module.css
+++ b/src/css/animedetail.module.css
@@ -33,6 +33,7 @@
 }
 .animecard p{
     text-indent: 3rem;
+    font-weight: 500;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .animecard iframe{
