--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -23,3 +23,9 @@ header div i{
     text-decoration: none;
     color: whitesmoke;
 }
+
+@media screen and (max-width:600px) {
+    header{
+        height: 15vh;
+    }
+}
