--- a/src/css/animedetail.module.css
+++ b/src/css/animedetail.module.css
@@ -10,6 +10,7 @@
 }
 .animecard h2{
     text-align: center;
+    font-size: 2rem;
 }
 .animecard img{
     height: 320px;
@@ -27,17 +28,28 @@
     flex-wrap: wrap;
 }
 .genre > h4{
-    background-color: black;
-    color: white;
+    background-color: #18181b;
+    color: whitesmoke;
     padding: 0.5rem 1rem;
+    border-radius: 0.75rem;
 }
 .animecard p{
+    color: #18181b;
     text-indent: 3rem;
     font-weight: 500;
+    text-align: justify;
+    word-break: break-all;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .animecard iframe{
+    display: none;
     width: 350px;
     align-self: center;
     border: 10px solid whitesmoke;
+}
+@media screen and (min-width:600px) {
+    .animecard iframe{
+        display: block;
+    }
 }
