--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ body {
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: none;
 }
 
 /* Make images easier to work with */
