--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,9 @@ select {
     scroll-behavior: auto !important;
   }
 }
+a {
+  color: inherit;
+  /* blue colors for links too */
+  text-decoration: inherit;
+  /* no underline */
+}
